--- a/package.json
+++ b/package.json
@@ -3,13 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@fontsource/roboto": "^4.4.0",
+    "@highcharts/map-collection": "^1.1.3",
+    "@material-ui/core": "^4.11.4",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "highcharts": "^8.1.2",
+    "highcharts-react-official": "^3.0.0",
+    "install": "^0.13.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "npm": "^7.15.0",
     "react": "^17.0.2",
+    "react-countup": "^4.3.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
